<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        style="@style/ViewMatch">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        style="@style/ViewMatchWidth">

        <include layout="@layout/layout_summary_year"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/summary_chart_acc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/margin_medium"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/summary_chart_cc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/margin_medium"/>

        <androidx.cardview.widget.CardView
            style="@style/LandingCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/ViewMatchWidth"
                android:padding="@dimen/margin_very_large">

                <TextView
                    android:id="@+id/select_month_title"
                    style="@style/ViewMatchWidth"
                    android:text="@string/select_month_title"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/select_month_text"
                    style="@style/ViewMatchWidth"
                    android:text="@string/select_month_text"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/select_month_title"/>

                <Spinner
                    android:id="@+id/select_month_picker"
                    style="@style/ViewWrap"
                    android:spinnerMode="dialog"
                    android:scrollbars="none"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/select_month_text"
                    android:layout_marginTop="@dimen/margin_medium"/>

                <Button
                    android:id="@+id/select_month_btn"
                    style="@style/ViewMatchWidth"
                    android:text="@string/select_month_btn"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/select_month_picker"
                    android:layout_marginTop="@dimen/margin_medium"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>